# modern-cpp-challenges

./: .gitignore  CMakeLists.txt
cmake/: ExternGoogleTest.cmake
include/: PrimeNumbers.h  math.h  mathutils.h
include/mathutils/: IntDivisors.h  NarcissisticNumbers.h  PrimeNumbers.h  mathutils.h
src/: CMakeLists.txt
src/mathutils/: CMakeLists.txt  IntDivisors.cpp  PrimeNumbers.cpp
test/: CMakeLists.txt
test/chapter01/: CMakeLists.txt  primenumbers.cpp  problem01.cpp  problem02.cpp  problem03.cpp  problem04.cpp  problem05.cpp  problem06.cpp  problem07.cpp  problem08.cpp  problem09.cpp
